--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Generate two-weeks artifact
+        run: >
+          jq -s . $(ls 20*/*.json | sort -n | tail -n 14) > two-weeks.json
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
