--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -135,7 +135,7 @@ jobs:
 
             let folderName = path.join('data', parsedDate.format('YYYY'), parsedDate.format('MM'));
             await fs.mkdir(folderName, { recursive: true });
-            await fs.writeFile(path.join(folderName, parsedDate.format('YYYY-MM-DD') + '.json'), JSON.stringify(formattedData, null, '\t'));
+            await fs.writeFile(path.join(folderName, parsedDate.format('YYYY-MM-DD') + '.json'), JSON.stringify({date, times}, null, '\t'));
           }
 
         EOF
