move publish into the scrape job

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -6,11 +6,26 @@ on:
       - main
   workflow_dispatch:
   schedule:
-  - cron: '6 2 * * *'
+    - cron: '6 2 * * *'
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  scheduled:
+  scrape:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
     - name: Check out this repo
       uses: actions/checkout@v4
@@ -147,3 +162,16 @@ jobs:
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
         git push
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
+    - name: Generate two-weeks artifact
+      run: >
+        jq -s . $(ls 20*/*/*.json | sort -n | tail -n 14) > data/two-weeks.json
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        # Upload entire repository
+        path: './data/'
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
