--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -27,6 +27,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '22'
     - name: Check out this repo
       uses: actions/checkout@v4
       with:
