--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -167,7 +167,7 @@ jobs:
 
             let outputTimes = new Map()
 
-            for (const hour = 0; hour < 24; hour++) {
+            for (let hour = 0; hour < 24; hour++) {
               let stringHour = String(hour).padStart(2, '0')
               let hourTotal = Object.entries(inputTimes).filter(([key]) => key.startsWith(`${stringHour}:`)).map(([_key, value]) => value).reduce((a, b) => a + b, 0)
               outputTimes.set(stringHour, hourTotal);
