--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -165,15 +165,13 @@ jobs:
             let {date, times: inputTimes} = JSON.parse(await fs.readFile(file))
             let parsedDate = dayjs(date)
 
-            let outputTimes = new Map()
+            let times = Object.create(null)
 
             for (let hour = 0; hour < 24; hour++) {
               let stringHour = String(hour).padStart(2, '0')
               let hourTotal = Object.entries(inputTimes).filter(([key]) => key.startsWith(`${stringHour}:`)).map(([_key, value]) => value).reduce((a, b) => a + b, 0)
-              outputTimes.set(stringHour, hourTotal);
+              times[stringHour] = hourTotal;
             }
-
-            let times = Object.fromEntries(outputTimes)
 
             let folderName = path.join('data', 'summary', parsedDate.format('YYYY'), parsedDate.format('MM'));
             await fs.mkdir(folderName, { recursive: true });
