--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Extract data from HTML document
       shell: bash
       run: >
-        node --experimental-default-type=module <<EOF
+        node --experimental-default-type=module <<'EOF'
 
           import fs from 'node:fs/promises';
           import path from 'node:path';
@@ -70,7 +70,7 @@ jobs:
     - name: Massage the data into a consistent format
       shell: bash
       run: >
-        node --experimental-default-type=module --experimental-network-imports <<EOF
+        node --experimental-default-type=module --experimental-network-imports <<'EOF'
 
           import fs from 'node:fs/promises';
           import path from 'node:path';
@@ -128,7 +128,7 @@ jobs:
     - name: Parse data into one-file-per-day format
       shell: bash
       run: >
-        node --experimental-default-type=module --experimental-network-imports <<EOF
+        node --experimental-default-type=module --experimental-network-imports <<'EOF'
 
           import fs from 'node:fs/promises';
           import path from 'node:path';
@@ -150,7 +150,7 @@ jobs:
     - name: Summarize parsed data into hourly information
       shell: bash
       run: >
-        node --experimental-default-type=module --experimental-network-imports <<EOF
+        node --experimental-default-type=module --experimental-network-imports <<'EOF'
 
           import fs from 'node:fs/promises';
           import path from 'node:path';
